[tool.poetry]
name = "ci"
version = "0.1.0"
description = ""
authors = ["Andrew Vaccaro <andrew.v@jarv.us>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
invoke = "^2.1.3"
pydantic = "^1.10.9"
confz = "^1.8.1"
doit = "^0.36.0"
python-decouple = "^3.8"
gitpython = "^3.1.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
