[tool.poetry]
name = "script"
version = "0.1.0"
description = ""
authors = ["Andrew Vaccaro <atvaccaro@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
MarkupSafe = "^2.1.2"
PyYAML = "^6.0"
requests = "^2.28.2"
jsonschema = "^4.17.3"
typer = "^0.7.0"
openpyxl = "^3.1.0"
calitp-data-infra = "2024.4.1"

[tool.poetry.dev-dependencies]
mypy = "^1.0.0"
types-requests = "^2.28.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
