[tool.poetry]
name = "calitp_warehouse"
version = "0.1.0"
description = ""
authors = ["Andrew Vaccaro <atvaccaro@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
colorama = "^0.4.4"
pydantic = "^1.9.0"
SQLAlchemy = "1.3.24"
sqlalchemy-bigquery = {extras = ["geography"], version = "^1.4.3"}
humanize = "^4.1.0"
requests-toolbelt = "^0.9.1"
pandas-gbq = "^0.17.4"
tqdm = "^4.64.0"
pendulum = "^2.1.2"
Shapely = "^1.8.2"
geopandas = "^0.10.2"
python-slugify = "^6.1.2"
sentry-sdk = "^1.9.8"
backoff = "^2.2.1"
dbt-core = "^1.3.1"
dbt-bigquery = "^1.3.0"
typer = "^0.7.0"
gcsfs = "^2023.1.0"
dbt-metabase = "^0.9.14"
networkx = {version = "<3", extras = ["default"]}
networkx-viewer = "^0.3.0"
# https://github.com/pygraphviz/pygraphviz/issues/398#issuecomment-1450367670
# export CFLAGS="-I $(brew --prefix graphviz)/include"
# export LDFLAGS="-L $(brew --prefix graphviz)/lib"
pygraphviz = "^1.10"

[tool.poetry.dev-dependencies]
sqlfluff = "^1.4.5"
black = "^22.12.0"
mypy = "^0.991"
isort = "^5.11.4"
types-tqdm = "^4.64.7"
types-requests = "^2.28.11"
types-python-slugify = "^8.0.0"
types-PyYAML = "^6.0.12"
pandas-stubs = "^1.5.2"
sqlalchemy-stubs = "^0.4"

[tool.poetry.group.dev.dependencies]
datamodel-code-generator = "^0.17.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = "sqlmypy"
