[tool.poetry]
name = "calitp_warehouse"
version = "0.1.1"
description = ""
authors = ["Andrew Vaccaro <atvaccaro@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
colorama = "^0.4.4"
pydantic = "^1.9.0"
SQLAlchemy = "1.3.24"
sqlalchemy-bigquery = {extras = ["geography"], version = "^1.4.3"}
humanize = "^4.1.0"
requests-toolbelt = "^0.9.1"
pandas-gbq = "^0.17.4"
tqdm = "^4.64.0"
pendulum = "^2.1.2"
Shapely = "^1.8.2"
geopandas = "^0.10.2"
python-slugify = "^6.1.2"
sentry-sdk = "^1.9.8"
backoff = "^2.2.1"
gcsfs = "^2023.1.0"
# should migrate to 1.x soon; 0.10.3 appears to be the end of the line for pre-1.0
dbt-metabase = "^0.10.3"
networkx = {version = "<3", extras = ["default"]}
# from https://github.com/pygraphviz/pygraphviz/issues/398#issuecomment-1450367670
# May need to run these after `brew install graphviz` when installing on macOS
# export CFLAGS="-I $(brew --prefix graphviz)/include"
# export LDFLAGS="-L $(brew --prefix graphviz)/lib"
pygraphviz = "^1.11"
palettable = "^3.3.0"
metabase-api = "^0.3.0"
# fiona 1.9 requires gdal 3 which ubuntu does not install yet
# from https://gis.stackexchange.com/questions/375685/how-to-install-or-build-gdal-3-on-debian-buster
fiona = "~1.8"
typer = "^0.4.0"
dbt-bigquery = "1.5.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
types-tqdm = "^4.64.7"
types-requests = "^2.28.11"
types-python-slugify = "^8.0.0"
types-PyYAML = "^6.0.12"
pandas-stubs = "^1.5.2"
sqlalchemy-stubs = "^0.4"
datamodel-code-generator = "^0.17.1"
sqlfluff = "^2.1.2"
sqlfluff-templater-dbt = "^2.0.2"
ipdb = "^0.13.13"
mypy = "^1.2.0"
pyspark = "~3.0" # pin this low because of stubs
pyspark-stubs = "^3.0.0.post3"
dbt-coverage = "^0.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
