[project]
name = "calitp_warehouse"
version = "0.1.1"
description = "dbt project that builds and tests models in the BigQuery warehouse"
authors = []
requires-python = ">=3.11,<3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "colorama>=0.4.4,<0.5",
    "pydantic>=1.9.0,<2",
    "SQLAlchemy==1.3.24",
    "sqlalchemy-bigquery[geography]>=1.4.3,<2",
    "humanize>=4.1.0,<5",
    "requests-toolbelt>=0.9.1,<0.10",
    "pandas-gbq>=0.26.1",
    "tqdm>=4.64.0,<5",
    "pendulum>=2.1.2,<3",
    "Shapely>=2.0.0,<3",
    "geopandas>=1.0.0,<2",
    "python-slugify>=6.1.2,<7",
    "sentry-sdk>=1.9.8,<2",
    "backoff>=2.2.1,<3",
    "gcsfs>=2023.1.0,<2024",
    "dbt-metabase>=1.6.1,<2",
    "networkx[default]<3",
    "pygraphviz==1.14",
    "palettable>=3.3.0,<4",
    "metabase-api>=0.3.0,<0.4",
    "fiona==1.10.1", # match the version in the analysis image.
    "typer>=0.4.0,<0.5",
    "dbt-core==1.10.1",
    "dbt-bigquery==1.10.0",
    "pyarrow==19.0.0", # install errors out when it self-picks 9.0.0
]

[dependency-groups]
dev = [
    "black>=24.3.0,<25",
    "isort>=5.11.4,<6",
    "types-tqdm>=4.64.7,<5",
    "types-requests>=2.28.11,<3",
    "types-python-slugify>=8.0.0,<9",
    "types-PyYAML>=6.0.12,<7",
    "pandas-stubs>=1.5.2,<2",
    "sqlalchemy-stubs>=0.4,<0.5",
    "datamodel-code-generator>=0.17.1,<0.18",
    "sqlfluff>=2.1.2,<3",
    "sqlfluff-templater-dbt>=2.0.2,<3",
    "ipdb>=0.13.13,<0.14",
    "mypy>=1.2.0,<2",
    "pyspark>=3.0,<3.1", # pin this low because of stubs
    "pyspark-stubs>=3.0.0.post3,<4",
    "dbt-coverage>=0.3.4,<0.4",
]

[tool.uv]
package = false

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
