[tool.poetry]
name = "calitp_map_utils"
version = "2023.5.31"
description = ""
authors = ["Andrew Vaccaro <andrew.v@jarv.us>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
pyyaml = "^6.0"
typer = "^0.9.0"
pydantic = "^1.10.7"
tqdm = "^4.64.0"
geojson-pydantic = "^0.6.1"
calitp-data = "2023.2.13.1"
requests = "^2.24.0"
furl = "^2.1.3"


[tool.poetry.group.dev.dependencies]
pydantic-to-typescript = "^1.0.10"
mypy = "^1.3.0"
types-tqdm = "^4.65.0.1"
types-requests = "^2.30.0.0"
pytest = "^7.3.1"
pytest-spec = "^3.2.0"
erdantic = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
