[project]
name = "jupyter-singleuser"
version = "2026.3.18"
description = "This is the notebook image that individual users are served via JupyterHub."
requires-python = ">=3.11.0, <3.12.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
# Data science packages are now managed by the data-analyses uv workspace.
# Analysts install them via `uv sync` into a persistent venv.
dependencies = [
    "jupyterlab>=4.5.7,<4.6.0",
    "pyproject-local-kernel>=0.11.0",
    "jupyter-resource-usage (>=1.1.1, <2.0.0)",
    "jupyter-server-proxy (>=4.1.1, <5.0.0)",
    "jupyterlab-code-formatter>=1.4.10",
    "jupytext>=1.13.5",
    "voila (>=0.5.11,<0.6.0)",
]

[tool.uv]
package = false

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
