[tool.poetry]
name = "gtfs-aggregator-scraper"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Andrew Vaccaro <atvaccaro@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.11"
typer = "^0.7.0"
calitp-data-infra = "2025.1.30"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
mypy = "^0.991"
types-tqdm = "^4.64.7"
types-requests = "^2.28.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
