[tool.poetry]
name = "gtfs-rt-parser-v2"
version = "2.0.0"
description = ""
authors = ["Andrew Vaccaro <atvaccaro@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
gtfs-realtime-bindings = "0.0.7"
google-auth = "1.32.1"
pathy = {extras = ["gcs"], version = "^0.6.1"}
yappi = "^1.3.3"
memory-profiler = "^0.60.0"
matplotlib = "^3.5.1"
typer = "^0.6.1"
protobuf = "^3.20.2"
backoff = "^2.2.1"
sentry-sdk = "^1.12.1"
calitp-data-infra = "2024.2.12"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
mypy = "^0.971"
types-protobuf = "^3.19.22"
types-tqdm = "^4.64.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
