[tool.poetry]
name = "gtfs-rt-parser-v2"
version = "2.0.0"
description = ""
authors = ["Andrew Vaccaro <atvaccaro@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8.1,<3.10"
gtfs-realtime-bindings = "0.0.7"
google-auth = "1.32.1"
pathy = {extras = ["gcs"], version = "^0.6.1"}
yappi = "^1.3.3"
memory-profiler = "^0.60.0"
matplotlib = "^3.5.1"
typer = "^0.6.1"
protobuf = "^3.20.2"
backoff = "^2.2.1"
sentry-sdk = "^1.12.1"
calitp-data-infra = "2024.2.12.post1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.3.0"
mypy = "^1.13.0"
types-protobuf = "^5.28.0.20240924"
types-tqdm = "^4.66.0.20240417"
isort = "^5.13.2"
pytest-env = "^1.1.5"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest_env]
CALITP_BUCKET__GTFS_RT_RAW = "gs://test-calitp-gtfs-rt-raw-v2"
CALITP_BUCKET__GTFS_RT_PARSED = "gs://test-calitp-gtfs-rt-parsed"
CALITP_BUCKET__GTFS_RT_VALIDATION = "gs://test-calitp-gtfs-rt-validation"
CALITP_BUCKET__GTFS_SCHEDULE_RAW = "gs://test-calitp-gtfs-schedule-raw-v2"
GTFS_RT_VALIDATOR_JAR = "gtfs-realtime-validator-lib-1.0.0-20220223.003525-2.jar"
GTFS_RT_VALIDATOR_VERSION = "v1.0.0"
