[tool.poetry]
name = "gtfs-rt-parser"
version = "0.1.0"
description = ""
authors = ["Andrew Vaccaro <atvaccaro@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
typer = "0.4.0"
humanize = "3.14.0"
backoff = "1.11.1"
gtfs-realtime-bindings = "0.0.7"
calitp = "0.0.12"
google-auth = "1.32.1"
click = "8.0.0"
structlog = "^21.5.0"
tqdm = "^4.63.1"
gcsfs = "0.8.0"
pendulum = "^2.1.2"
pydantic = "^1.9.0"
pytest = "^7.1.1"
pathy = {extras = ["gcs"], version = "^0.6.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
