[tool.poetry]
name = "gtfs-schedule-validator"
version = "0.1.0"
description = ""
authors = ["Andrew Vaccaro <atvaccaro@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
toml = "^0.10.2"
gcsfs = "^2022.5.0"
typer = "^0.6.1"
humanize = "^4.2.3"
pydantic = "^1.9.1"
pendulum = "^2.1.2"
tqdm = "^4.64.0"
backoff = "^2.2.1"
python-slugify = "^7.0.0"
sentry-sdk = "^1.12.1"
calitp-data-infra = "2024.2.12.post1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.991"
types-tqdm = "^4.64.7"
types-toml = "^0.10.8"
types-python-slugify = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
