[tool.poetry]
name = "sentry-error-loader"
version = "1.0.0"
description = ""
authors = ["Soren Spicknall <soren.s@jarv.us>"]

[tool.poetry.dependencies]
python = "~3.9"
clickhouse-connect = "^0.5.14"
pandas = "^1.3.1"
pendulum = "^2.1.2"
typer = "^0.7.0"
calitp-data-infra = "2023.2.16.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
mypy = "^0.991"
types-tqdm = "^4.64.7"
types-requests = "^2.28.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
