[tool.poetry]
name = "gtfs-rt-archiver"
version = "2023.8.9"
description = ""
authors = ["Andrew Vaccaro <atvaccaro@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
typer = "^0.4.1"
huey = "^2.4.3"
pydantic = "^1.9.1"
pendulum = "^2.1.2"
redis = "^4.5.4"
schedule = "^1.1.0"
prometheus-client = "^0.14.1"
requests = "^2.28.1"
google-cloud-storage = "^2.4.0"
hiredis = "^2.0.0"
orjson = "^3.7.6"
cachetools = ">=2.0.0,<5.0"
structlog = "^22.1.0"
python-json-logger = "^2.0.4"
backoff = "^2.1.2"
sentry-sdk = "^1.9.8"
calitp-data-infra = "2024.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
snakeviz = "^2.1.1"
types-requests = "^2.28.11"
types-cachetools = "^5.2.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
