[project]
name = "metabase-dashboard-templates"
version = "0.1.0"
description = "Manage Metabase dashboards as Jinja-templated YAML files."
requires-python = ">=3.11"
dependencies = [
    "Jinja2",
    "PyYAML",
    "click",
    "google-cloud-secret-manager==2.16.1",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.uv]
package = false
