[project]
name = "tides-validation"
version = "0.1.0"
description = "Local validator that exports a Cal-ITP TIDES table to parquet and runs Frictionless validation against the TIDES JSON schema."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "db-dtypes>=1.3",
    "frictionless[parquet]>=5.18",
    "google-cloud-bigquery>=3.20",
    "pandas>=2",
    "pendulum>=3",
    "pyarrow>=15",
]
